--- a/avRegistration/register-directive/register-directive.less
+++ b/avRegistration/register-directive/register-directive.less
@@ -1,6 +1,7 @@
 [av-register] {
   .registerheader {
     text-align: center;
+    margin-top: 0;
     margin-bottom: 30px;
     color: @av-secondary;
   }
