--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -72,6 +72,18 @@
   padding-left: 40px;
 }
 
+.btn-transparent {
+  transition: all .4s ease;
+  border-color: @av-primary-contrast;
+  color: @av-primary-contrast;
+  background-color: transparent;
+
+  &:hover {
+    color: @av-primary;
+    background-color: white;
+  }
+}
+
 #no-js {
   color: @gray-dark;
   text-align: center;
