--- a/themes/podemos/app.less
+++ b/themes/podemos/app.less
@@ -60,6 +60,18 @@
   padding-right: 0;
 }
 
+.btn-transparent {
+  transition: all .4s ease;
+  border-color: @av-primary-contrast;
+  color: @av-primary-contrast;
+  background-color: transparent;
+
+  &:hover {
+    color: @av-primary;
+    background-color: white;
+  }
+}
+
 #no-js {
   color: @gray-dark;
   text-align: center;
