--- a/app.less
+++ b/app.less
@@ -54,6 +54,7 @@
 @import "avRegistration/fields/password-field-directive/password-field-directive.less";
 @import "avRegistration/fields/text-field-directive/text-field-directive.less";
 @import "avRegistration/fields/code-field-directive/code-field-directive.less";
+@import "avRegistration/fields/bool-field-directive/bool-field-directive.less";
 
 /* admin */
 @import "avAdmin/admin-controller/admin-controller.less";
