--- a/avRegistration/login-directive/login-directive.less
+++ b/avRegistration/login-directive/login-directive.less
@@ -10,6 +10,11 @@
   .help-h3 {
     margin-top: 0;
   }
+
+  .input-warn {
+    display: block;
+    min-height: 38px;
+  }
 }
 
 .form-horizontal {
