--- a/avRegistration/register-directive/register-directive.less
+++ b/avRegistration/register-directive/register-directive.less
@@ -5,4 +5,23 @@
     margin-bottom: 30px;
     color: @av-secondary;
   }
+
+  .help-sidebar {
+    padding-right: 30px;
+  }
+
+  .input-error {
+    margin-bottom: -10px;
+    margin-top: -10px;
+  }
+
+  .input-warn {
+    margin-top: -30px;
+    display: block;
+    min-height: 38px;
+  }
+
+  .button-group {
+    margin-top: 20px !important;
+  }
 }
