--- a/app.less
+++ b/app.less
@@ -63,6 +63,7 @@
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
 /* admin directives */
 @import "avAdmin/admin-directives/elections/elections.less";
+@import "avAdmin/admin-directives/create/create.less";
 @import "avAdmin/admin-directives/dashboard/dashboard.less";
 @import "avAdmin/admin-directives/question/question.less";
 
