--- a/avBooth/start-screen-directive/start-screen-directive.less
+++ b/avBooth/start-screen-directive/start-screen-directive.less
@@ -3,6 +3,10 @@
     padding-bottom: 10px;
   }
 
+  .description {
+    padding-bottom: 15px;
+  }
+
   .unfixed-top-height {
     max-height: 220px;
   }
