adding links colors in themes

--- a/themes/podemos/app.less
+++ b/themes/podemos/app.less
@@ -21,6 +21,10 @@
 
 /* Global LESS */
 
+a:hover, a:active {
+  color: lighten(@av-secondary, 15%);
+}
+
 .btn-plain {
   border-radius: 0;
   border: 0;
