admin: working on census and extrafields

--- a/avAdmin/admin-controller/admin-controller.less
+++ b/avAdmin/admin-controller/admin-controller.less
@@ -10,13 +10,16 @@
 
   label {
     text-align: right;
+    font-weight: normal;
+    font-size: 16px;
   }
 
   .header-block {
     display: block;
     background-color: @gray-lighter;
     color: @gray;
-    padding: 5px;
+    padding: 10px;
+    margin: 25px 0;
 
     > .glyphicon {
       font-size: 18px;
