--- a/app.less
+++ b/app.less
@@ -63,9 +63,19 @@
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
 /* admin directives */
 @import "avAdmin/admin-directives/elections/elections.less";
+@import "avAdmin/admin-directives/extra-field/extra-field.less";
 @import "avAdmin/admin-directives/create/create.less";
 @import "avAdmin/admin-directives/dashboard/dashboard.less";
 @import "avAdmin/admin-directives/question/question.less";
+@import "avAdmin/admin-directives/elauth/elauth.less";
+@import "avAdmin/admin-directives/elcensus/elcensus.less";
+@import "avAdmin/admin-directives/import/import.less";
+@import "avAdmin/admin-directives/elbasic/elbasic.less";
+@import "avAdmin/admin-directives/account/account.less";
+@import "avAdmin/admin-directives/billinghistory/billinghistory.less";
+@import "avAdmin/admin-directives/billinginfo/billinginfo.less";
+@import "avAdmin/admin-directives/elquestions/elquestions.less";
+@import "avAdmin/admin-directives/eltally/eltally.less";
 
 /* Add Component LESS Above */
 
