--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -88,6 +88,13 @@ a:hover, a:active {
   }
 }
 
+.disable-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 #no-js {
   color: @gray-dark;
   text-align: center;
