--- a/themes/podemos/app.less
+++ b/themes/podemos/app.less
@@ -96,6 +96,13 @@ a:hover, a:active {
   padding: 5%;
 }
 
+.disable-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 /* End Global LESS */
 
 // podemos custom
