--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -41,6 +41,19 @@
 
     .extra-fields-wrapper {
       padding-top: 25px;
+      position: relative;
+
+      [av-extra-field] {
+        position: relative;
+      }
+
+      .dndPlaceholder {
+        position: relative;
+        display: block;
+        background-color: @gray-light;
+        width: 100%;
+        height: 50px;
+      }
     }
   }
 }
