--- a/avAdmin/admin-controller/admin-controller.less
+++ b/avAdmin/admin-controller/admin-controller.less
@@ -24,6 +24,10 @@
     > .glyphicon {
       font-size: 18px;
     }
+
+    > button.pull-right {
+      margin-top: -6px;
+    }
   }
 
   .admin-controller-content {
