adding confirmation screens to the dashboard actions

--- a/avAdmin/admin-controller/admin-controller.less
+++ b/avAdmin/admin-controller/admin-controller.less
@@ -31,6 +31,6 @@
   }
 
   .admin-controller-content {
-    background-color: lighten(@gray-lighter, 5%);
+    background-color: @av-primary-contrast;
   }
 }
