--- a/themes/podemos/app.less
+++ b/themes/podemos/app.less
@@ -76,6 +76,22 @@ a:hover, a:active {
   }
 }
 
+.modal-dialog {
+  margin-top: 15%;
+
+  .dialog-header-warning {
+    background-color: @btn-warning-bg;
+  }
+
+  .modal-header h4 {
+    color: @av-primary-contrast;
+
+    .title {
+      padding-left: 15px;
+    }
+  }
+}
+
 #no-js {
   color: @gray-dark;
   text-align: center;
