configurable election create on review screen

--- a/avAdmin/admin-directives/create/create.less
+++ b/avAdmin/admin-directives/create/create.less
@@ -3,4 +3,15 @@
     height: 200px;
     overflow-y: scroll;
   }
+
+  .form-group.create-election {
+    label, input {
+      float: left;
+      padding: 10px;
+    }
+
+    label {
+      margin-top: -8px;
+    }
+  }
 }
