make census configuration not-editable when election has been registered and created

--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.less
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.less
@@ -19,6 +19,17 @@
       border-color: @gray-lighter;
     }
 
+    &.disabled {
+      &.selected,  &.selected:hover {
+        border-color: @gray-lighter;
+      }
+
+      &:hover {
+        border-color: transparent;
+        cursor: default;
+      }
+    }
+
     input[type="radio"] {
       display: none;
     }
