--- a/avBooth/accordion-option-directive/accordion-option-directive.less
+++ b/avBooth/accordion-option-directive/accordion-option-directive.less
@@ -11,7 +11,15 @@
     display: block;
     float: left;
     width: 70%;
-    height: 80px;
+    min-height: 40px;
+
+    &.hide-link {
+      width: 100%;
+
+      .show-remove {
+        right: 0%;
+      }
+    }
   }
 
   h4 {
