--- a/avAdmin/admin-directives/elections/elections.less
+++ b/avAdmin/admin-directives/elections/elections.less
@@ -1,8 +1,57 @@
-.electionlist > tbody > tr > td,
-.electionlist > tbody > tr > th {
-    vertical-align: middle;
-}
+[av-admin-elections] {
+  .electionlist {
+    border: none;
 
-.electionlist .search {
-    max-width: 300px;
+    tbody {
+      > tr {
+
+        > td {
+          transition: 0.3s linear all;
+          padding: 0;
+          background-color: lighten(@gray-lighter, 4%);
+          border-color: @av-primary-contrast;
+          border-width: 5px;
+        }
+
+        &:hover > td {
+          background-color: @gray-lighter;
+        }
+      }
+    }
+
+    tr, th {
+      vertical-align: middle;
+
+      a {
+        padding: 8px;
+        display: block;
+        vertical-align: middle;
+        width: 100%;
+        min-height: 57px;
+        color: @gray-darker;
+
+        &:hover {
+          color: @gray-darker;
+          text-decoration: none;
+        }
+
+        &.padded {
+          padding-top: 18px;
+        }
+
+        .italic {
+          color: @gray;
+          font-style: italic;
+        }
+
+        &.text-av-secondary {
+          color: @av-secondary;
+        }
+      }
+    }
+
+    .search {
+      max-width: 300px;
+    }
+  }
 }
