--- a/avAdmin/admin-directives/dashboard/dashboard.less
+++ b/avAdmin/admin-directives/dashboard/dashboard.less
@@ -7,6 +7,10 @@
       background-size: 100% 8px;
   }
 
+  .text-gray-light {
+    color: lighten(@gray-light, 10%);
+  }
+
   .text-muted .stick {
       background-image: url("/img/stick-gray.png");
   }
