--- a/app.less
+++ b/app.less
@@ -29,6 +29,7 @@
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
+@import "avBooth/circle-option-directive/circle-option-directive.less";
 @import "avBooth/success-screen-directive/success-screen-directive.less";
 
 /* election */
