darken view details links in circle-options layout

--- a/avBooth/circle-option-directive/circle-option-directive.less
+++ b/avBooth/circle-option-directive/circle-option-directive.less
@@ -4,6 +4,10 @@
   float: left;
   padding: 15px;
 
+  a:hover {
+    color: darken(@av-secondary, 10%);
+  }
+
   .show-value, .external-link {
     width: 100%;
     display: block;
