adding details question layout to voting booth

--- a/app.less
+++ b/app.less
@@ -30,6 +30,7 @@
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
 @import "avBooth/circle-option-directive/circle-option-directive.less";
+@import "avBooth/detail-option-directive/detail-option-directive.less";
 @import "avBooth/success-screen-directive/success-screen-directive.less";
 
 /* election */
