--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -64,6 +64,7 @@
     color: @btn-primary-color;
     width: 100%;
     margin: 0;
+    margin-top: 20px;
     padding: 5px;
     transition: all .8s ease;
 
