make blank vote height equal to all

--- a/avBooth/circle-option-directive/circle-option-directive.less
+++ b/avBooth/circle-option-directive/circle-option-directive.less
@@ -8,6 +8,10 @@
     color: darken(@av-secondary, 10%);
   }
 
+  a {
+    min-height: 40px;
+  }
+
   .show-value, .external-link {
     width: 100%;
     display: block;
