fix circle blank vote ellipsis on chrome

--- a/avBooth/circle-option-directive/circle-option-directive.less
+++ b/avBooth/circle-option-directive/circle-option-directive.less
@@ -1,3 +1,7 @@
+.avb-circle-blank-option img {
+  min-height: 180px !important;
+}
+
 [avb-circle-option], .avb-circle-blank-option {
   display: block;
   width: 220px;
@@ -92,7 +96,7 @@
 
 
     .image-wrap {
-      border: 7px solid darken(@av-primary, 10%);
+      border: 5px solid darken(@av-primary, 10%);
     }
   }
 }
