booth: change background of demo booth warning ribbon, to make it more visible

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -129,7 +129,8 @@
   }
 
   .warning-demo {
-    background-color: @av-secondary;
+    background-color: @btn-warning-bg;
+    color: @av-primary-contrast;
     color: white;
     margin-top: -30px;
     padding-top: 10px;
