improve flashing of info

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -136,6 +136,38 @@
     padding-top: 10px;
     margin-bottom: 30px;
   }
+
+  .warnings {
+    .text-brand-warning {
+      display: inline-block;
+      background-color: @btn-warning-bg;
+      color: @av-primary-contrast;
+
+      &.flashing, &.flashing-out {
+        transition: color .4s ease, background-color .4s ease;
+      }
+
+      &.flashing {
+        color: @btn-warning-bg !important;
+        background-color: @av-primary-contrast !important;
+      }
+    }
+
+    .text-brand-primary {
+      display: inline-block;
+      background-color: @btn-primary-bg;
+      color: @av-primary-contrast;
+
+      &.flashing, &.flashing-out {
+        transition: color .4s ease, background-color .4s ease;
+      }
+
+      &.flashing {
+        color: @btn-primary-bg !important;
+        background-color: @av-primary-contrast !important;
+      }
+    }
+  }
 }
 
 @media(min-width: @screen-sm-min) {
