--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.less
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.less
@@ -46,6 +46,16 @@
     }
   }
 
+  .affix-top {
+    margin: 0;
+  }
+
+  .affixed.extra-fields-affix-placeholder {
+    display: block;
+    width: 100%;
+    height: 91px;
+  }
+
   .form-group {
     margin-left: 0;
     margin-right: 0;
