--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -35,6 +35,12 @@
     }
   }
 
+  .affixed.affix-placeholder {
+    display: block;
+    width: 100%;
+    height: 91px;
+  }
+
   .form-group {
     margin-left: 0;
     margin-right: 0;
