--- a/avAdmin/admin-directives/question/question.less
+++ b/avAdmin/admin-directives/question/question.less
@@ -20,12 +20,23 @@
       }
     }
 
+    .input-group.col-xs-2 {
+      float: left;
+      min-width: 140px;
+    }
+
+    .input-error > span.error {
+      margin-top: 5px;
+      display: inline-block;
+    }
+
     .buttons i {
         cursor: pointer;
     }
 
     .qform {
         margin-top: 10px;
+        padding: 0 8px;
     }
 
     .option {
