adding optional details to accordion options

--- a/avBooth/accordion-option-directive/accordion-option-directive.less
+++ b/avBooth/accordion-option-directive/accordion-option-directive.less
@@ -44,8 +44,19 @@
   }
 
   .show-value {
+    &h4 {
     font-weight: normal;
-    font-size: 12pt;
+      font-size: 12pt;
+    }
+
+    &h3 {
+      font-size: 14pt;
+      font-weight: bold;
+    }
+  }
+
+  p {
+    line-height: 14px;
   }
 
   .show-remove {
