--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
@@ -24,6 +24,7 @@
 
   h4 {
     font-weight: bold;
+    padding-top: 14px;
   }
 
   p.details {
@@ -44,9 +45,19 @@
   }
 
   .show-value {
-    font-weight: normal;
-    font-size: 12pt;
-    padding-top: 30px;
+    &h4 {
+      font-weight: normal;
+      font-size: 12pt;
+    }
+
+    &h3 {
+      font-size: 14pt;
+      font-weight: bold;
+    }
+  }
+
+  p {
+    line-height: 14px;
   }
 
   .show-remove {
