booth: adding first version for conditional-accordion question layout, seems to work fine, no option reordering yet though

--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
@@ -44,16 +44,8 @@
     margin: 30px 2% 10px 2%;
   }
 
-  .show-value {
-    &h4 {
-      font-weight: normal;
-      font-size: 12pt;
-    }
-
-    &h3 {
-      font-size: 14pt;
-      font-weight: bold;
-    }
+  h3.show-value {
+    padding-top: 3px;
   }
 
   p {
