--- a/app.less
+++ b/app.less
@@ -6,9 +6,11 @@
 
 /* avBooth */
 @import "avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.less";
+@import "avBooth/ahoram-primaries-screen-directive/ahoram-primaries-screen-directive.less";
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
+@import "avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.less";
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.less";
 @import "avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.less";
