--- a/app.less
+++ b/app.less
@@ -7,6 +7,7 @@
 /* avBooth */
 @import "avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.less";
 @import "avBooth/ahoram-primaries-screen-directive/ahoram-primaries-screen-directive.less";
+@import "avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.less";
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
