ahoram-primaries: showing facepic

--- a/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.less
+++ b/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.less
@@ -21,6 +21,18 @@
         right: 0%;
       }
     }
+
+    img {
+      height: 45px;
+      width: auto;
+      border-radius: 25px;
+      margin: 5px 10px 5px 0;
+      display: inline-block;
+    }
+
+    h4 {
+      display: inline-block;
+    }
   }
 
   .right-side {
@@ -29,7 +41,7 @@
     top: 2%;
     width: 90px;
     text-align: right;
-    height: 40px;
+    height: 43px;
 
     a {
       display: block;
@@ -37,6 +49,7 @@
       color: @av-primary;
       font-size: 20px;
       line-height: 20px;
+      padding-top: 3px;
       padding-bottom: 5px;
       transition: 0.2s;
 
@@ -71,7 +84,7 @@
     padding: 0 10px;
     position: absolute;
     background-color: @brand-danger;
-    top: -9px;
+    top: 2px;
     right: 90px;
   }
 
