working version of ahoram-primaries layout

--- a/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.less
+++ b/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.less
@@ -10,7 +10,7 @@
   .opt-data {
     display: block;
     float: left;
-    margin-right: 90px;
+    padding-right: 90px;
     min-height: 55px;
     width: 100%;
 
