--- a/app.less
+++ b/app.less
@@ -60,6 +60,7 @@
 @import "avRegistration/fields/email-field-directive/email-field-directive.less";
 @import "avRegistration/fields/password-field-directive/password-field-directive.less";
 @import "avRegistration/fields/text-field-directive/text-field-directive.less";
+@import "avRegistration/fields/dni-field-directive/dni-field-directive.less";
 @import "avRegistration/fields/tel-field-directive/tel-field-directive.less";
 @import "avRegistration/fields/code-field-directive/code-field-directive.less";
 @import "avRegistration/fields/bool-field-directive/bool-field-directive.less";
