initial support for dnd

--- a/avBooth/selected-options-directive/selected-options-directive.less
+++ b/avBooth/selected-options-directive/selected-options-directive.less
@@ -29,4 +29,37 @@
     opacity:1;
     max-height:40px;
   }
+
+  [dnd-list], [dnd-draggable] {
+    position: relative;
+  }
+
+  [dnd-list] {
+    /**
+      * The dnd-list should always have a min-height,
+      * otherwise you can't drop to it once it's empty
+      */
+    min-height: 42px;
+
+    /**
+      * The dndDraggingSource class will be applied to
+      * the source element of a drag operation. It makes
+      * sense to hide it to give the user the feeling
+      * that he's actually moving it.
+      */
+    .dndDraggingSource {
+      display: none;
+    }
+
+    /**
+      * An element with .dndPlaceholder class will be
+      * added to the dnd-list while the user is dragging
+      * over it.
+      */
+    .dndPlaceholder {
+      display: block;
+      background-color: @gray-light;
+      min-height: 42px;
+    }
+  }
 }
