--- a/app.less
+++ b/app.less
@@ -49,6 +49,7 @@
 @import "avElection/layouts/public-view-directive/public-view-directive.less";
 @import "avElection/question-results-directive/question-results-directive.less";
 @import "avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less";
+@import "avElection/borda-results-directive/borda-results-directive.less";
 @import "avElection/verify-results-directive/verify-results-directive.less";
 @import "avElection/authorities-directive/authorities-directive.less";
 
