remove padding in login input fields in small screens

--- a/avElection/layouts/default-election-directive/default-election-directive.less
+++ b/avElection/layouts/default-election-directive/default-election-directive.less
@@ -52,7 +52,7 @@
 }
 
 @media(max-width: @screen-sm-max) {
-  .background > .container {
+  .background > .container, .background  .top-section > .pad {
     padding: 0;
   }
 }
