--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.less
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.less
@@ -2,7 +2,7 @@
   .form-group .radio {
     border: 2px solid transparent;
     border-radius: 4px;
-    padding: 10px 15px;
+    padding: 10px 15px 10px 45px;
     text-align: left;
     cursor: pointer;
 
@@ -31,7 +31,8 @@
     }
 
     input[type="radio"] {
-      display: none;
+      margin-left: -30px;
+      margin-right: 10px;
     }
 
     .header {
