admin: changing a bit the style of question header

--- a/avAdmin/admin-directives/question/question.less
+++ b/avAdmin/admin-directives/question/question.less
@@ -7,12 +7,18 @@
     transition: 0.3s linear all;
 
     .q-title {
-      padding: 10px;
+      padding: 10px 15px;
       margin: 0;
+      font-size: 18px;
       cursor: pointer;
 
       &:hover {
         background-color: darken(@av-bg, 6%);
+      }
+
+      .fa {
+        font-style: normal;
+        font-weight: bold;
       }
 
       > .col-sm-10, > .col-sm-2 {
