--- a/avAdmin/admin-directives/question-option-details/question-option-details.less
+++ b/avAdmin/admin-directives/question-option-details/question-option-details.less
@@ -28,7 +28,12 @@
       min-height: 26px;
       display: inline-block;
       padding-top: 3px;
-      padding-left: 6px;
+      padding-left: 0;
+      margin-left: -7px;
+
+      > .glyphicon {
+        margin-right: 10px;
+      }
     }
 
     input {
