--- a/avAdmin/admin-directives/question-option-simple/question-option-simple.less
+++ b/avAdmin/admin-directives/question-option-simple/question-option-simple.less
@@ -1,6 +1,10 @@
 [av-question-option-simple] {
   .row();
 
+  &.editable {
+    cursor: move;
+  }
+  
   padding: 10px;
   background-color: @av-bg-hover;
   margin-top: 5px;
@@ -16,11 +20,17 @@
     min-height: 26px;
     display: inline-block;
     padding-top: 3px;
-    padding-left: 6px;
-    cursor: default !important;
+    padding-left: 0;
+    margin-left: -7px;
+
+    > .glyphicon {
+      margin-right: 10px;
+    }
+
   }
 
   input {
+    margin-left: 16px;
     width: 100%;
   }
 
