change color no-js message to light gray, less in-your-face

--- a/themes/bcnencomu/app.less
+++ b/themes/bcnencomu/app.less
@@ -112,7 +112,7 @@ a:hover, a:active {
 }
 
 #no-js {
-  color: @gray-dark;
+  color: lighten(@gray-light, 10%);
   text-align: center;
   padding: 5%;
 }
