--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -112,7 +112,7 @@ a:hover, a:active {
 }
 
 #no-js {
-  color: @gray-dark;
+  color: lighten(@gray-light, 10%);
   text-align: center;
   padding: 5%;
 }
