--- a/themes/podemos/app.less
+++ b/themes/podemos/app.less
@@ -93,7 +93,7 @@ a:hover, a:active {
 }
 
 #no-js {
-  color: @gray-dark;
+  color: lighten(@gray-light, 10%);
   text-align: center;
   padding: 5%;
 }
