making accordion very flexible and removing other non-flexible layouts

--- a/app.less
+++ b/app.less
@@ -1,4 +1,6 @@
+
 @import "avb-start-loading.less";
+@import "avUi/global.less";
 
 /* avUi */
 @import "avUi/simple-error-directive/simple-error-directive.less";
@@ -11,7 +13,6 @@
 @import "avBooth/ahoram-primaries-selected-option-directive/ahoram-primaries-selected-option-directive.less";
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
-@import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
 @import "avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.less";
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.less";
@@ -20,8 +21,6 @@
 @import "avBooth/busy-directive/busy-directive.less";
 @import "avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less";
 @import "avBooth/encrypting-ballot-screen-directive/encrypting-ballot-screen-directive.less";
-@import "avBooth/simple-option-directive/simple-option-directive.less";
-@import "avBooth/simple-selected-option-directive/simple-selected-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
 @import "avBooth/help-screen-directive/help-screen-directive.less";
 @import "avBooth/review-screen-directive/review-screen-directive.less";
@@ -34,8 +33,6 @@
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
 @import "avBooth/circle-option-directive/circle-option-directive.less";
-@import "avBooth/detail-option-directive/detail-option-directive.less";
-@import "avBooth/detail-selected-option-directive/detail-selected-option-directive.less";
 @import "avBooth/success-screen-directive/success-screen-directive.less";
 
 /* election */
