--- a/avBooth/accordion-option-directive/accordion-option-directive.less
+++ b/avBooth/accordion-option-directive/accordion-option-directive.less
@@ -1,5 +1,6 @@
 [avb-accordion-option] {
   cursor: pointer;
+  line-height: 15px;
   position: relative;
   display: block;
   padding-left: 15px;
@@ -10,67 +11,84 @@
   .opt-data {
     display: block;
     float: left;
-    width: 70%;
+    width: 100%;
+    line-height: 15px;
+    padding-right: 55px;
     min-height: 40px;
 
+    &.show-category {
+      margin-top: 15px;
+    }
+
     &.hide-link {
-      width: 100%;
+      padding-right: 0;
 
       .show-remove {
         right: 0%;
       }
     }
-  }
 
-  p.details {
-    line-height: 15px !important;
-    display: block;
-    padding-right: 5px;
-    overflow: hidden;
-    max-height: 30px;
+    img {
+      width: auto;
+      max-width: 90px;
+      border-radius: 25px;
+      margin: 0 10px 0 0;
+      display: inline-block;
+      vertical-align: bottom;
+    }
+
+    .vertilize-col {
+      padding: 10px 0;
+    }
+
+    .vertilize-col > img, .vertilize-col .text-sibling {
+      display: inline-block;
+    }
+
+    strong.show-value {
+      display: block;
+      padding-bottom: 10px;
+      clear: both;
+    }
+
+
+    p {
+      line-height: 15px !important;
+      display: block;
+      padding-right: 5px;
+      overflow: hidden;
+      max-height: 30px;
+    }
   }
 
   a.btn-right {
     display: block;
-    float: left;
-    width: 26%;
-    height: 60px;
-    padding-top: 20px;
-    margin: 10px 2%;
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 34px;
+    padding: 5px;
+    margin-right: 5px;
   }
 
-  .show-value {
-    &h4 {
-    font-weight: normal;
-      font-size: 12pt;
-    }
-
-    &h3 {
-      font-size: 14pt;
-      font-weight: bold;
-    }
-  }
-
-  p {
-    line-height: 14px;
-  }
 
   .show-remove {
     display: none;
     padding: 0 10px;
     position: absolute;
     background-color: @brand-danger;
-    top: 0;
-    right: 30%;
+    top: 10px;
+    right: 55px;
   }
 
-  &.selected {
+  &.selected.highlight-selected {
     color: white;
     background-color: @av-primary;
   }
 
   &.selected:hover {
     background-color: @brand-danger;
+    color: white;
 
     .show-remove {
       color: white;
@@ -80,5 +98,11 @@
 
   &:hover {
     background-color: @gray-lighter;
+  }
+
+  span.label {
+    position: absolute;
+    top: 9px;
+    left: 2%;
   }
 }
