--- a/avBooth/accordion-options-directive/accordion-options-directive.less
+++ b/avBooth/accordion-options-directive/accordion-options-directive.less
@@ -1,4 +1,4 @@
-[avb-accordion-options] [accordion] {
+[avb-accordion-options] [accordion], [avb-accordion-option] {
 
 
   .btn {
@@ -38,6 +38,7 @@
         padding: 10px 15px;
         cursor: pointer;
         display: block;
+        min-height: 37px;
         width: 100%;
         transition: all .4s ease;
 
