booth: final aestetic changes to accordion layout

--- a/avUi/global.less
+++ b/avUi/global.less
@@ -42,6 +42,10 @@ a:hover, a:active {
   padding-right: 0;
 }
 
+.vert-align-top {
+  vertical-align: top;
+}
+
 .btn-transparent {
   transition: all .4s ease;
   border-color: @av-primary-contrast;
