admin census: moving search to header-block and removing duplicated action

--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -1,4 +1,8 @@
 [av-admin-elcensus] {
+  .input-group.search {
+    margin-right: 10px;
+  }
+
   .form-group .radio {
     border: 2px solid transparent;
     border-radius: 4px;
