--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -3,6 +3,10 @@
     margin-right: 10px;
   }
 
+  .header-block.affix-top {
+    margin-top: 0;
+  }
+
   .form-group .radio {
     border: 2px solid transparent;
     border-radius: 4px;
