admin census: adding some purely aesthetic changes

--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -71,8 +71,23 @@
     }
   }
 
-  tr td.wide {
-    text-align: center;
-    padding: 30px;
+  .censustable {
+    tr td.wide {
+      text-align: center;
+      padding: 30px;
+    }
+
+    .small-col {
+      width: 95px;
+
+      * {
+        display: block;
+      }
+
+      input {
+        margin-right: 5px;
+        float: left;
+      }
+    }
   }
 }
