adding confirm step to remove people from census

--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -77,6 +77,10 @@
       padding: 30px;
     }
 
+    thead > tr > th {
+      vertical-align: top;
+    }
+
     .small-col {
       width: 95px;
 
