admin census: making remove confirm dialog danger-red

--- a/avUi/global.less
+++ b/avUi/global.less
@@ -65,6 +65,10 @@ a:hover, a:active {
     background-color: @btn-warning-bg;
   }
 
+  .dialog-header-danger {
+    background-color: @btn-danger-bg;
+  }
+
   .modal-header h4 {
     color: @av-primary-contrast;
 
