admin census: making census filtering also work when creating the election

--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -81,6 +81,10 @@
       vertical-align: top;
     }
 
+    tbody > tr {
+      transition: all 0.5s ease;
+    }
+
     .small-col {
       width: 95px;
 
