--- a/app.less
+++ b/app.less
@@ -72,6 +72,7 @@
 @import "avAdmin/admin-directives/elections/elections.less";
 @import "avAdmin/admin-directives/extra-field/extra-field.less";
 @import "avAdmin/admin-directives/create/create.less";
+@import "avAdmin/admin-directives/census-field/census-field.less";
 @import "avAdmin/admin-directives/dashboard/dashboard.less";
 @import "avAdmin/admin-directives/question/question.less";
 @import "avAdmin/admin-directives/elauth/elauth.less";
