--- a/app.less
+++ b/app.less
@@ -87,6 +87,7 @@
 @import "avAdmin/admin-directives/question-option-simple/question-option-simple.less";
 @import "avAdmin/admin-directives/question-option-details/question-option-details.less";
 @import "avAdmin/admin-directives/eltally/eltally.less";
+@import "avAdmin/admin-directives/column-filters/int/column-filter-int.less";
 
 /* Add Component LESS Above */
 
