admin census: adding sorting/filtering to active column

--- a/app.less
+++ b/app.less
@@ -88,6 +88,7 @@
 @import "avAdmin/admin-directives/question-option-details/question-option-details.less";
 @import "avAdmin/admin-directives/eltally/eltally.less";
 @import "avAdmin/admin-directives/column-filters/int/column-filter-int.less";
+@import "avAdmin/admin-directives/column-filters/bool/column-filter-bool.less";
 
 /* Add Component LESS Above */
 
