adding initial support for pairwise comparisons

--- a/app.less
+++ b/app.less
@@ -30,6 +30,7 @@
 @import "avBooth/pcandidates-rows-directive/pcandidates-rows-directive.less";
 @import "avBooth/pcandidates-row-directive/pcandidates-row-directive.less";
 @import "avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less";
+@import "avBooth/pairwise-beta-directive/pairwise-beta-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
