improving pairwise-beta support

--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
@@ -72,11 +72,17 @@
 
 @media(max-width: @screen-sm-min) {
   [avb-pairwise-beta] {
-    .pairs .clickable {
-      margin: 0;
+    .pairs {
+      .clickable {
+        margin: 0;
 
-      .img-wrapper {
-        max-height: 100px;
+        .img-wrapper {
+          max-height: 100px;
+        }
+      }
+
+      .col-xs-6 {
+        padding: 0;
       }
     }
   }
