--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
@@ -33,10 +33,13 @@
       max-height: 200px;
       overflow: hidden;
 
-      img {
+      img, iframe {
         width: 100%;
         height: auto;
+        max-height: 56.25vw; /* 315/560 = .5625 */
       }
+
+
     }
 
     h2 {
