cookies notification text visible in loop theme

--- a/themes/loop/app.less
+++ b/themes/loop/app.less
@@ -11,6 +11,14 @@
 @text-success: @av-secondary;
 @state-success-text: @av-secondary;
 
+.bg-primary {
+    color: #555;
+}
+
+#cookies-eu {
+    border-top: 1px solid #aaa;
+}
+
 
 
 /* Admin Config */
