small fix in loop's theme

--- a/themes/loop/app.less
+++ b/themes/loop/app.less
@@ -19,8 +19,6 @@
     border-top: 1px solid #aaa;
 }
 
-
-
 /* Admin Config */
 @av-bg: #EEE;
 @av-bg-hover: #DDD;
@@ -47,7 +45,7 @@
 }
 
 [ave-default-election] .top-section {
-  ul.election-links > li.selected > a, ul.election-links > li > a {
+  ul.election-links > li.selected > a, ul.election-links > li > a, [ave-simple-question] h3 {
     color: @av-secondary !important;
   }
 }
