fix dict fields with long words in admin census

--- a/avAdmin/admin-directives/census-field/census-field.less
+++ b/avAdmin/admin-directives/census-field/census-field.less
@@ -53,11 +53,15 @@
         font-weight: bold;
         width: 30%;
         text-align: right;
+        overflow: hidden;
+        word-break: break-all;
       }
 
       .value {
         display: inline-block;
         width: 65%;
+        overflow: hidden;
+        word-break: break-all;
       }
     }
   }
