improving again dict fields

--- a/avAdmin/admin-directives/census-field/census-field.less
+++ b/avAdmin/admin-directives/census-field/census-field.less
@@ -55,6 +55,7 @@
         text-align: right;
         overflow: hidden;
         word-break: break-all;
+        vertical-align: top;
       }
 
       .value {
@@ -62,6 +63,7 @@
         width: 65%;
         overflow: hidden;
         word-break: break-all;
+        vertical-align: top;
       }
     }
   }
