fixing avBooth fixed top bar color in theme loop

--- a/themes/loop/app.less
+++ b/themes/loop/app.less
@@ -57,7 +57,7 @@
 }
 
 [av-booth] {
-  .navbar-unfixed-top {
+  .navbar-unfixed-top, .navbar-fixed-top {
     color: @av-primary-contrast !important;
   }
 
