fix some colors in the default theme

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -22,3 +22,8 @@
 @imgdir: "../../img";
 
 @import "../../app.less";
+
+[ave-default-election] .background .top-section,
+[ave-public-view] .background .top-section {
+  color: #333;
+}
