small loop theme color change in modal dialog for null vote confirmation

--- a/themes/loop/app.less
+++ b/themes/loop/app.less
@@ -92,6 +92,9 @@
   }
 }
 
+.modal-dialog .modal-header.dialog-header-warning h4 .title {
+  color: white !important;
+}
 
 [av-change-lang] {
   &:hover {
