pcandidates-election: adding support for Image URL for candidates, and more sorting policies

--- a/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
+++ b/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
@@ -38,6 +38,14 @@
     color: #46884f;
     overflow: hidden;
 
+    img.cand-img {
+      height: 35px;
+      width: auto;
+      border-radius: 10px;
+      margin: -25px 5px 0 0;
+      display: inline-block;
+    }
+
     .first-candidate {
       line-height: 16px;
       white-space: nowrap;
@@ -51,6 +59,8 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      line-height: 33px;
+      display: inline-block;
     }
 
     .num-selected {
@@ -86,6 +96,14 @@
         text-overflow: ellipsis;
         background-color: #DFF0D8;
         color: #46884f;
+
+        img.item-cand-img {
+          height: 25px;
+          width: auto;
+          border-radius: 7px;
+          margin: -0 5px 0 0;
+          display: inline-block;
+        }
 
         &:hover {
           background-color: #CCC;
