--- a/themes/bcnencomu/app.less
+++ b/themes/bcnencomu/app.less
@@ -23,3 +23,11 @@
 
 @import "../../app.less";
 
+[av-booth] .navbar-unfixed-top a {
+  color: white;
+  text-decoration: underline;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
