adding preset support

--- a/avBooth/multi-question-directive/multi-question-directive.less
+++ b/avBooth/multi-question-directive/multi-question-directive.less
@@ -65,4 +65,27 @@
       }
     }
   }
+
+
+  .preset {
+    .opt {
+      font-size: 20px;
+      text-align: center;
+      padding: 10px;
+      padding-bottom: 20px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: @gray-lighter;
+      }
+    }
+
+    .left-border {
+      border-left: 1px solid @gray;
+    }
+
+    .options-row {
+      padding-bottom: 20px;
+    }
+  }
 }
