updating cup theme

--- a/themes/cup/app.less
+++ b/themes/cup/app.less
@@ -27,6 +27,11 @@
   color: #26241E;
 }
 
+#cookies-eu.bg-primary {
+   color: #26241E;
+   background-color: #fcfcfc;
+}
+
 [av-booth] .navbar-unfixed-top a {
   color: #ED0C6E;
   text-decoration: underline;
