fixing cup theme for election view

--- a/themes/cup/app.less
+++ b/themes/cup/app.less
@@ -4,7 +4,7 @@
 @av-primary: #FFED00;
 @av-secondary: #980F20;
 @av-primary-contrast: #980F20;
-@av-secondary-contrast: #980F20;
+@av-secondary-contrast: #fff;
 @brand-primary: @av-primary;
 @brand-success: @av-secondary;
 @link-color: #ED0C6E;
